--- a/index.html
+++ b/index.html
@@ -1,138 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <header>
-      <nav>
-        <a href="/"> <span>Web</span>studio</a>
+        <nav>
+            <a href="./index.html"> <span>Web</span>studio</a>
+            <ul>
+                <li><a href="">Studio</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Contacts</a></li>
+            </ul>
+        </nav>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
-      </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-      </ul>
     </header>
     <main>
-      <!-- Section 2 -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <a href="">Order Service</a>
-      </section>
-      <section>
-        <ul>
-          <li>Strategy</li>
-          <li>
-            Our goal is to identify the busines problem to walk away with th
-            perfect and creative solution.
-          </li>
-        </ul>
-        <ul>
-          <li>Punctuality</li>
-          <li>
-            Bring the key message to th brand's audience for the best pric
-            within the shortest possible time.
-          </li>
-        </ul>
-        <ul>
-          <li>Diligence</li>
-          <li>
-            Research and confirm brands tha present the strongest digital growt
-            opportunities and minimize risk.
-          </li>
-        </ul>
-        <ul>
-          <li>Technologies</li>
-          <li>
-            Design practice focused on digita experiences. We bring forth a dee
-            passion for problem-solving.
-          </li>
-        </ul>
-      </section>
-      <!-- Section 3 -->
-      <section>
-        <ul>
-          <li><h2>What are we doing</h2></li>
-          <li>
-            <img
-              src="./imgaes/Whatareyd1.jpg"
-              alt="What are we doing"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./imgaes/Whatareyd2.jpg"
-              alt="What are we doing"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./imgaes/Whatareyd3.jpg"
-              alt="What are we doing"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
-            <img src="./imgaes/team1.jpg" alt="Mark" width="264" height="260" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img src="./imgaes/team2.jpg" alt="Tom" width="264" height="260" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./imgaes/team3.jpg"
-              alt="Camila"
-              width="264"
-              height="260"
-            />
-            <h3>Camila Garcia</h3>
+        <!-- Section 2 -->
+        <section>
+            <h1>Effective Solutions for Your Business</h1>
+            <a href="">Order Service</a>
+        </section>
+        <section>
+            <ul>
+                <li>Strategy</li>
+                <li>
+                    Our goal is to identify the busines problem to walk away with th
+                    perfect and creative solution.
+                </li>
+            </ul>
+            <ul>
+                <li>Punctuality</li>
+                <li>
+                    Bring the key message to th brand's audience for the best pric
+                    within the shortest possible time.
+                </li>
+            </ul>
+            <ul>
+                <li>Diligence</li>
+                <li>
+                    Research and confirm brands tha present the strongest digital growt
+                    opportunities and minimize risk.
+                </li>
+            </ul>
+            <ul>
+                <li>Technologies</li>
+                <li>
+                    Design practice focused on digita experiences. We bring forth a dee
+                    passion for problem-solving.
+                </li>
+            </ul>
+        </section>
+        <!-- Section 3 -->
+        <section>
+            <ul>
+                <li>
+                    <h2>What are we doing</h2>
+                </li>
+                <li>
+                    <img src="./imgaes/Whatareyd1.jpg" alt="What are we doing" width="360" height="300" />
+                </li>
+                <li>
+                    <img src="./imgaes/Whatareyd2.jpg" alt="What are we doing" width="360" height="300" />
+                </li>
+                <li>
+                    <img src="./imgaes/Whatareyd3.jpg" alt="What are we doing" width="360" height="300" />
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Our Team</h2>
+            <ul>
+                <li>
+                    <img src="./imgaes/team1.jpg" alt="Mark" width="264" height="260" />
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./imgaes/team2.jpg" alt="Tom" width="264" height="260" />
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./imgaes/team3.jpg" alt="Camila" width="264" height="260" />
+                    <h3>Camila Garcia</h3>
 
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./imgaes/team4.jpg"
-              alt="Daniel"
-              width="264"
-              height="260"
-            />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
-          </li>
-        </ul>
-      </section>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./imgaes/team4.jpg" alt="Daniel" width="264" height="260" />
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer>
-      <a href="/">Web</a>
-      <a href="/">Studio</a>
-      <ul>
-        <li>
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </li>
-      </ul>
+        <a href="./index.html"> <span>Web</span>studio</a>
+        <ul>
+            <li>
+                Increase the flow of customers and sales for your business with
+                digital marketing & growth solutions.
+            </li>
+        </ul>
     </footer>
-  </body>
+</body>
+
 </html>
