--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html"> <span>Web</span>studio</a>
+            <a href="./index.html"><span>Web</span>studio</a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
@@ -27,52 +27,43 @@
         <!-- Section 2 -->
         <section>
             <h1>Effective Solutions for Your Business</h1>
-            <a href="">Order Service</a>
+            <button style="button">Order Service</button>
         </section>
         <section>
             <ul>
-                <li>Strategy</li>
                 <li>
-                    Our goal is to identify the busines problem to walk away with th
-                    perfect and creative solution.
+                    <h>Strategy</h3>
+                        Our goal is to identify the busines problem to walk away with th
+                        perfect and creative solution.
                 </li>
-            </ul>
-            <ul>
-                <li>Punctuality</li>
                 <li>
-                    Bring the key message to th brand's audience for the best pric
-                    within the shortest possible time.
+                    <h>Punctuality</h3>
+                        Bring the key message to th brand's audience for the best pric
+                        within the shortest possible time.
                 </li>
-            </ul>
-            <ul>
-                <li>Diligence</li>
                 <li>
-                    Research and confirm brands tha present the strongest digital growt
-                    opportunities and minimize risk.
+                    <h>Diligence</h3>
+                        Research and confirm brands tha present the strongest digital growt
+                        opportunities and minimize risk.
                 </li>
-            </ul>
-            <ul>
-                <li>Technologies</li>
                 <li>
-                    Design practice focused on digita experiences. We bring forth a dee
-                    passion for problem-solving.
+                    <h>Technologies</h3>
+                        Design practice focused on digita experiences. We bring forth a dee
+                        passion for problem-solving.
                 </li>
-            </ul>
         </section>
         <!-- Section 3 -->
         <section>
+            <h2>What are we doing</h2>
             <ul>
                 <li>
-                    <h2>What are we doing</h2>
+                    <img src="./imgaes/whatareyd1.jpg" alt="What are we doing" width="360" height="300" />
                 </li>
                 <li>
-                    <img src="./imgaes/Whatareyd1.jpg" alt="What are we doing" width="360" height="300" />
+                    <img src="./imgaes/whatareyd2.jpg" alt="What are we doing" width="360" height="300" />
                 </li>
                 <li>
-                    <img src="./imgaes/Whatareyd2.jpg" alt="What are we doing" width="360" height="300" />
-                </li>
-                <li>
-                    <img src="./imgaes/Whatareyd3.jpg" alt="What are we doing" width="360" height="300" />
+                    <img src="./imgaes/whatareyd3.jpg" alt="What are we doing" width="360" height="300" />
                 </li>
             </ul>
         </section>
@@ -104,13 +95,11 @@
         </section>
     </main>
     <footer>
-        <a href="./index.html"> <span>Web</span>studio</a>
-        <ul>
-            <li>
-                Increase the flow of customers and sales for your business with
-                digital marketing & growth solutions.
-            </li>
-        </ul>
+        <a href="./index.html"><span>Web</span>studio</a>
+        <p>
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+        </p>
     </footer>
 </body>
 
