--- a/index.html
+++ b/index.html
@@ -27,30 +27,31 @@
         <!-- Section 2 -->
         <section>
             <h1>Effective Solutions for Your Business</h1>
-            <button style="button">Order Service</button>
+            <button type="button">Order Service</button>
         </section>
         <section>
             <ul>
                 <li>
-                    <h>Strategy</h3>
-                        Our goal is to identify the busines problem to walk away with th
-                        perfect and creative solution.
+                    <h3>Strategy</h3>
+                    <p>Our goal is to identify the busines problem to walk away with th
+                        perfect and creative solution.</p>
                 </li>
                 <li>
-                    <h>Punctuality</h3>
-                        Bring the key message to th brand's audience for the best pric
-                        within the shortest possible time.
+                    <h3>Punctuality</h3>
+                    <p>Bring the key message to th brand's audience for the best pric
+                        within the shortest possible time.</p>
                 </li>
                 <li>
-                    <h>Diligence</h3>
-                        Research and confirm brands tha present the strongest digital growt
-                        opportunities and minimize risk.
+                    <h3>Diligence</h3>
+                    <p>Research and confirm brands tha present the strongest digital growt
+                        opportunities and minimize risk.</p>
                 </li>
                 <li>
-                    <h>Technologies</h3>
-                        Design practice focused on digita experiences. We bring forth a dee
-                        passion for problem-solving.
+                    <h3>Technologies</h3>
+                    <p>Design practice focused on digita experiences. We bring forth a dee
+                        passion for problem-solving.</p>
                 </li>
+            </ul>
         </section>
         <!-- Section 3 -->
         <section>
