--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </ul>
     </header>
     <main>
-        <!-- Section 2 -->
+        <!-- Section 2   -->
         <section>
             <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
@@ -58,13 +58,13 @@
             <h2>What are we doing</h2>
             <ul>
                 <li>
-                    <img src="./imgaes/whatareyd1.jpg" alt="What are we doing" width="360" height="300" />
+                    <img src="./imgaes/img11.jpg" alt="What are we doing" width="360" height="300" />
                 </li>
                 <li>
-                    <img src="./imgaes/whatareyd2.jpg" alt="What are we doing" width="360" height="300" />
+                    <img src="./imgaes/img22.jpg" alt="What are we doing" width="360" height="300" />
                 </li>
                 <li>
-                    <img src="./imgaes/whatareyd3.jpg" alt="What are we doing" width="360" height="300" />
+                    <img src="./imgaes/img33.jpg" alt="What are we doing" width="360" height="300" />
                 </li>
             </ul>
         </section>
@@ -84,7 +84,6 @@
                 <li>
                     <img src="./imgaes/team3.jpg" alt="Camila" width="264" height="260" />
                     <h3>Camila Garcia</h3>
-
                     <p>Marketing</p>
                 </li>
                 <li>
